--- a/SQLite/app/src/main/res/layout/activity_main.xml
+++ b/SQLite/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.tjusyj.sqlite.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="save" />
+
+    <Button
+        android:id="@+id/bt_read"
+        android:layout_below="@id/bt_save"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="read" />
 </RelativeLayout>
